Finished Login and Semi rendered out Option's meny

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     />
 
     <link rel="stylesheet" href="style.css" />
-    <title>Book App</title>
+    <title>Andrea's Hell's Cantina</title>
   </head>
   <body>
     <div id="root"></div>
